# SecureWatch

./: .docs-config.json  .gitignore  .npmrc  .readthedocs.yaml  .tsbuildinfo-root  BUILD_FIXES.md  CHANGELOG.md  CLI_DASHBOARD_IMPLEMENTATION.md  Claude.md  E2E_TEST_RESULTS.md  EXPLORER_SEARCH_FIXES.md  INFRASTRUCTURE_ANALYSIS.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  ISSUES_RESOLVED.md  KNOWLEDGE_TRANSFER_COMPLETE.md  MONOREPO_SETUP.md  Makefile  NEXT_STEPS_ANALYSIS.md  QUICK_START.md  README.md  SECUREWATCH_PLATFORM_ANALYSIS.md  Troubleshoot  bug_tracker.json  build_wasm.sh  cli-dashboard.sh  create_tables.sql  docker-compose.dev.yml  docker-compose.opensearch.yml  docker-compose.resilient.yml  docker-compose.yml  error-tracking.json  eslint.config.mjs  health_framework.ts  ingest-poc.ts  install_agent_mac.sh  mock-mcp-api.js  next.config.ts  package-lock.json  package.json  (+17 more)
.github/workflows/: ci.yml  docs-automation.yml  readme-automation.yml  security-scan.yml  update-readme.yml
.taskmaster/: config.json
.turbo/cache/: 0633da7c002f188f-meta.json  0633da7c002f188f.tar.zst  0c8bb3319678b430-meta.json  0c8bb3319678b430.tar.zst  10e11590fc4cb628-meta.json  10e11590fc4cb628.tar.zst  14cab7a4bccd1e78-meta.json  16040adff7c2fda8-meta.json  16040adff7c2fda8.tar.zst  197768148aef2f43-meta.json  197768148aef2f43.tar.zst  1b975ffefe475519-meta.json  1b975ffefe475519.tar.zst  2755e4da1823a19b-meta.json  2755e4da1823a19b.tar.zst  28dd5e78b96db905-meta.json  28dd5e78b96db905.tar.zst  2dc1b2ae9803e64a-meta.json  2fd54a831938c077-meta.json  366eef08fa8761e0-meta.json  40ecf8b6afa05f5c-meta.json  410a8b5ff671557a-meta.json  43d206929d4122e2-meta.json  43d206929d4122e2.tar.zst  58fe437597ac968d-meta.json  58fe437597ac968d.tar.zst  5c4f3633b9e2c70e-meta.json  5c4f3633b9e2c70e.tar.zst  5f88daacd8d0e63d-meta.json  5f88daacd8d0e63d.tar.zst  6cb6a6e8c8cd3f37-meta.json  7637d256105439c0-meta.json  7637d256105439c0.tar.zst  767d8697c8feb685-meta.json  767d8697c8feb685.tar.zst  795b90182c75d4a5-meta.json  795b90182c75d4a5.tar.zst  857c43f805e8d6ff-meta.json  858eaed621f799a0-meta.json  858eaed621f799a0.tar.zst  (+50 more)
agent/: config.ini  config.ini.example  event_log_agent.py  macos_soc_config.txt
agent-rust/: Cargo.toml  Cross.toml  README.md  WINDOWS_ARM64_TROUBLESHOOTING.md  agent.toml.example  build-all-targets.sh  build-dmg.sh  build-universal-dmg.sh  build.rs.disabled  build_all_platforms.sh  setup-windows-sdk.sh  test_main.rs  windows-arm64-build.sh
agent-rust/.cargo/: config.toml
agent-rust/benches/: performance_benchmarks.rs
agent-rust/proto/: agent_management.proto
agent-rust/scripts/: run_tests.sh
agent-rust/src/: agent.rs  buffer.rs  buffer_minimal.rs  circuit_breaker.rs  config.rs  emergency_shutdown.rs  errors.rs  lib.rs  main.rs  management.rs  management_disabled.rs  resource_management.rs  resource_monitor.rs  retry.rs  security.rs  simple_agent.rs  throttle.rs  transport.rs  utils.rs  validation.rs
agent-rust/src/buffer/: tests.rs
agent-rust/src/circuit_breaker/: tests.rs
agent-rust/src/collectors/: base.rs  file_monitor.rs  mod.rs  syslog.rs  tests.rs  windows_event.rs
agent-rust/src/config/: tests.rs
agent-rust/src/parsers/: mod.rs
agent-rust/src/transport/: circuit_breaker_tests.rs  tests.rs
agent-rust/src/validation/: tests.rs
agent-rust/tests/: integration_tests.rs
agent/core/: __init__.py  agent.py  buffer.py  config.py  exceptions.py  health.py  persistent_queue.py  transport.py  (+1 more)
agent_venv/: pyvenv.cfg
cli-dashboard/: BLESSED_CONTRIB_DASHBOARD.md  ENHANCED_FEATURES.md  ENHANCED_STATUS_IMPLEMENTATION.md  README.md  USAGE_EXAMPLES.md  package-lock.json  package.json  tsconfig.json
docs/: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLI_DASHBOARD_IMPLEMENTATION.md  CORRELATION_RULES_ENGINE_ERD.md  Claude.md  DATA_INGESTION_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_AUTOMATION_GUIDE.md  ENTERPRISE_DEPLOYMENT.md  ENTITY_RELATIONSHIP_DIAGRAM.md  ERD_VISUAL_DIAGRAMS.md  EVTX_ATTACK_SAMPLES_TESTING.md  EVTX_PARSER_ENHANCED.md  EVTX_PARSING_STRATEGY.md  INCIDENT_RESPONSE_PROCEDURES.md  INTEGRATION_STATUS.md  KQL_API_GUIDE.md  LOG_FORMATS_GUIDE.md  LOOKUP_TABLES_USER_GUIDE.md  MONOREPO_SETUP.md  Makefile  OPENSEARCH_INTEGRATION_GUIDE.md  PERFORMANCE_API_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PORT_CONFIGURATION.md  PRD_EventLogger.md  PRD_SecureWatch.md  PRD_SecureWatch_Unified.md  QUICK_START.md  RBAC_USER_GUIDE.md  README-badge.md  README.md  README_AUTOMATION_GUIDE.md  README_SecureWatch.md  SECUREWATCH_BUG_ANALYSIS.md  SECURITY_CONFIGURATION_GUIDE.md  SECURITY_FIXES_SUMMARY.md  SSO_SETUP_GUIDE.md  (+16 more)
frontend/: .eslintrc.json  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
installer-gui/: Cargo.toml  README.md  build-installer.sh  tauri.conf.json
installer-gui/src/: main.rs
installer-gui/ui/: index.html  package-lock.json  package.json
installer-gui/ui/src/: App.tsx  index.css
kqlparser_adapter_wasm/: Cargo.toml
kqlparser_adapter_wasm/src/: lib.rs
scripts/: README-error-tracking.md  bug-management.md  bug-tracker.py  docs-manager.js  error-tracker.js  evtx_parser.py  evtx_parser_enhanced.py  incident-response-toolkit.sh  log_collector.py  optimize-concurrency.js  otrf_data_ingester.py  package-lock.json  package.json  parse_event_ids.py  requirements-evtx.txt  run_comprehensive_otrf_tests.py  service-monitor.ts  setup_otrf_testing.sh  taskmaster-helper.js  test-tracker.py  test_correlation_with_otrf.py  test_enhanced_evtx_pipeline.py  test_evtx_pipeline.py  test_kql_with_otrf.py  update-readme-advanced.js  update-readme.js
src/: middleware.ts
tasks/: task_001.txt  task_001_status.md  task_002.txt  task_002_status.md  task_003.txt  task_003_status.md  task_004.txt  task_004_status.md  task_005.txt  task_005_status.md  task_006.txt  task_006_status.md  task_007.txt  task_007_status.md  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json
temp/: Playwright Site Scan Prompt.rtf
(+650 files in other folders)
