[package]
name = "securewatch-agent"
version = "1.0.0"
edition = "2021"
authors = ["SecureWatch Team"]
description = "High-performance SIEM agent for SecureWatch platform"
license = "MIT"
repository = "https://github.com/securewatch/agent"

[[bin]]
name = "securewatch-agent"
path = "src/main.rs"

[dependencies]
# Tokio async runtime with full features
tokio = { version = "1.45.1", features = ["full"] }

# Core async utilities
tokio-tungstenite = "0.24"
tokio-util = { version = "0.7", features = ["full"] }

# Serialization and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI and logging
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking and TLS
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = "0.23"
webpki-roots = "0.26"

# System utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
sysinfo = "0.32"

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Cross-platform file watching
notify = "6.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_EventLog",
    "Win32_System_Services",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry"
] }
winapi = { version = "0.3", features = ["winbase", "winerror"] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"

[profile.release-optimized]
inherits = "release"
opt-level = 3

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"